# jessy

./: .gitignore  AGENTS.md  Cargo.toml  PLAN-new.md  PLAN.md  README.md
config/: profile.example.yaml
docs/: OPERATIONS.md  PIPELINE_REFACTOR_PLAN.md  PROCEDURE.md  README.md
jessy-core/: Cargo.toml
jessy-core/src/: lib.rs
jessy-enrich/: Cargo.toml
jessy-enrich/src/: lib.rs
jessy-extract/: Cargo.toml
jessy-extract/src/: lib.rs
jessy-load/: Cargo.toml
jessy-load/src/: lib.rs
jessy-old/: .gitignore  README.md
jessy-old/config/: profile.example.yaml
jessy-old/docs/: ADDING_PLATFORM.md  ARCHITECTURE.md  OPERATIONS.md
jessy-old/jessy-extract/: Cargo.toml
jessy-old/src-new/: README.md  main.rs
jessy-prefilter/: Cargo.toml
jessy-prefilter/src/: lib.rs
jessy-serve/: Cargo.toml
jessy-serve/src/: lib.rs
migrations/: 001_init.sql
plugin/: PLAN.md  README.md
plugin/.claude/: settings.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: jessy-browser-worker.md  jessy-judge-worker.md  jessy-learn-worker.md  jessy-linkedin-extractor.md  jessy-ops-worker.md  jessy-report-worker.md  jessy-wellfound-extractor.md
plugin/commands/: cleanup.md  config.md  learn.md  prefs.md  report.md  reset.md  run.md  scan.md
plugin/config/: config.example.yaml  preferences.example.md
plugin/scripts/: db.sh  db_path.sh  db_scan.sh  db_stage.sh  install_bare_alias.sh  onboard.sh  render_cards.sh  report_session.sh  schema.sql  sqlite_common.sh
src/: cli.rs  config.rs  main.rs
src-new/: README.md  extract_sqlite.rs  main.rs
src-new/inbound/: mod.rs
(+76 files in other folders)
