[workspace]
members = [
    ".",
    "jessy-core",
    "jessy-extract",
    "jessy-load",
    "jessy-prefilter",
    "jessy-enrich",
    "jessy-serve",
]
resolver = "2"

[package]
name = "jessy"
version = "0.1.0"
edition = "2021"
description = "Read-only job search intelligence assistant"
license = "MIT"

[[bin]]
name = "jessy-new"
path = "src-new/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
hex = "0.4"
regex = "1.11"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "gzip"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "process", "time", "signal", "fs"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5"
urlencoding = "2.1"

rig = { package = "rig-core", version = "0.31.0" }
jessy-load = { path = "jessy-load" }
jessy-prefilter = { path = "jessy-prefilter" }

[dev-dependencies]
tempfile = "3.13"
